# game-of-life

./: .gitignore  CMakeLists.txt  LICENSE  RAWDATA.md  README.md  REPORT.md
.img/: grid.afphoto
JavaUI/src/: MainUI.java  Server.java
SocketSender/: CMakeLists.txt  main.cpp  socket_connector.cpp  socket_connector.h
dependencies/json-3.11.2/: json.hpp
src/: GameOfLife.h  global.cpp  global.h  main.cpp
src/benchmark/: Benchmark.cpp  Benchmark.h
src/gameoflife/: GameInput.h  GameOfLife.cpp  GameOfLife.h
src/gameoflife/benchmark/: BenchmarkInput.h  BenchmarkResult.h
src/gameoflife/types/: BenchmarkInput.h  BenchmarkResult.h  GameInput.h  ThreadConfig.h
src/messages/: Benchmark.cpp  Benchmark.h  GameInput.h  Start.cpp  Start.h  StartMessage.h  Update.cpp  Update.h  UpdateAck.cpp  UpdateAck.h  UpdateMessage.h
src/parallel/: GameOfLifePar.cpp  GameOfLifePar.h
src/sequential/: GameOfLifeSeq.cpp  GameOfLifeSeq.h
src/server/: Server.cpp  Server.h
src/util/: Input.h  Parse.h
test/: CMakeLists.txt  gameoflifetest.cpp
ui/: build.gradle
ui/src/main/java/: module-info.java
ui/src/main/java/ppr/: Main.java
ui/src/main/java/ppr/messages/: BenchmarkInput.java  BenchmarkMessage.java  DiffDeserializer.java  GameInput.java  StartMessage.java  ThreadConfig.java  UpdateAckMessage.java  UpdateMessage.java
ui/src/main/java/ppr/messages/helper/: DiffDeserializer.java
ui/src/main/java/ppr/util/: Input.java
